# tilemania

./: .dockerignore  .gitignore  ASSET_SPECIFICATIONS.md  AUDIO_REQUIREMENTS.md  AUDIO_SELECTION_GUIDE.md  BEVY_015_MIGRATION_STATUS.md  BUILD_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DAY13_COMPLETION_SUMMARY.md  DAY15_COMPLETION_SUMMARY.md  DAY17_COMPLETION_SUMMARY.md  DAY18_COMPLETION_SUMMARY.md  DAY5_DISK_SPACE_ANALYSIS.md  DAY6_COMPLETION_SUMMARY.md  DAY8_COMPLETION_SUMMARY.md  DOCKER.md  Dockerfile  Dockerfile.dev  EXECUTIVE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FONT_INTEGRATION_GUIDE.md  LEGAL_CONSIDERATIONS.md  LICENSE  README.md  SETTINGS_SYSTEM.md  SPRINT_10_COMPLETION.md  SPRINT_13_COMPLETION.md  SPRINT_1_COMPLETION.md  SPRINT_1_TRACKER.md  SPRINT_1_WEEK_3_COMPLETION.md  SPRINT_2_DAY12_KICKOFF.md  SPRINT_2_DAY13_KICKOFF.md  SPRINT_2_TRACKER.md  SPRINT_3_COMPLETION.md  SPRINT_4_COMPLETION.md  SPRINT_7_COMPLETION.md  STAGE1_COMPLETE.md  STAGE1_COMPLETE_100_PERCENT.md  (+15 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/audio/: README.md
assets/fonts/: README.md
assets/lexicons/: ENABLE.txt  RE-ENABLE.txt  README.md  TML.txt
assets/sprites/: README.md
benches/: lexicon_bench.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DOCUMENTATION_REORGANIZATION.md  GAME_DESIGN.md  IMPLEMENTATION_ROADMAP.md  README.md
docs/archive/: 01_ARCHITECTURE_REVIEW.md  02_TECH_LEAD_FEEDBACK.md  03_ARCHITECT_RESPONSE.md  (+24 more)
src/: main.rs
tests/: lexicon_test.rs
wolges-wasm-test/: Cargo.toml
(+68 files in other folders)
