[package]
name = "tilemania"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["bevy/default"]
web = ["bevy/webgl2"]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.15"
bevy_tweening = "0.11"
bevy_hanabi = "0.14"
bevy_kira_audio = "0.20"
wolges = { git = "https://github.com/andy-k/wolges.git" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
indexed_db_futures = "0.4"
web-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lexicon_bench"
harness = false
